[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/BoutonsMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/rectangle-menu.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.8057
margin_top = -20.0
margin_right = 131.194
margin_bottom = 284.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Commencer" type="TextureButton" parent="VBoxContainer"]
margin_right = 219.0
margin_bottom = 73.0
focus_neighbour_bottom = NodePath("../Options")
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Commencer" type="RichTextLabel" parent="VBoxContainer/Commencer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -13.5
margin_right = 40.0
margin_bottom = 13.5
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_text = "Commencer"
text = "Commencer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 219.0
margin_bottom = 150.0
focus_neighbour_top = NodePath("../Commencer")
focus_neighbour_bottom = NodePath("../Credits")
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Options" type="RichTextLabel" parent="VBoxContainer/Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -9.0
margin_right = 28.0
margin_bottom = 9.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_text = "Options"
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 219.0
margin_bottom = 227.0
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Quitter")
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Credits" type="RichTextLabel" parent="VBoxContainer/Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -8.5
margin_right = 25.5
margin_bottom = 8.5
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_text = "Crédits"
text = "Crédits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quitter" type="TextureButton" parent="VBoxContainer"]
margin_top = 231.0
margin_right = 219.0
margin_bottom = 304.0
focus_neighbour_top = NodePath("../Credits")
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Quitter" type="RichTextLabel" parent="VBoxContainer/Quitter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -8.5
margin_right = 25.5
margin_bottom = 8.5
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_text = "Quitter"
text = "Quitter"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Commencer" to="VBoxContainer/Commencer" method="_on_Commencer_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="VBoxContainer/Options" method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="VBoxContainer/Credits" method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quitter" to="VBoxContainer/Quitter" method="_on_Quitter_pressed"]
